Fix nav bar on mobile

--- a/style.css
+++ b/style.css
@@ -86,4 +86,7 @@ video {
     h1 {
         font-size: 30px;
     }
+    .nav {
+        font-size: 13px;
+    }
 }
